--- a/write-up/ref.bib
+++ b/write-up/ref.bib
@@ -1,3 +1,12 @@
+@misc{gh,
+  author = {Zhou, Eddie and Chou-Ren, Daway},
+  title = {cos424-hw1},
+  year = {2015},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/edz504/cos424-hw1}},
+  commit = {4f57d6a0e4c030202a07a60bc1bb1ed1544bf679}
+}
 @article{scikit-learn,
  title={Scikit-learn: Machine Learning in {P}ython},
  author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
@@ -31,3 +40,111 @@
   year={2009},
   publisher={" O'Reilly Media, Inc."}
 }
+
+@article{matthews1993neural,
+  title={Neural computation in stylometry I: An application to the works of Shakespeare and Fletcher},
+  author={Matthews, Robert AJ and Merriam, Thomas VN},
+  journal={Literary and Linguistic Computing},
+  volume={8},
+  number={4},
+  pages={203--209},
+  year={1993},
+  publisher={ALLC}
+}
+
+@article{merriam1994neural,
+  title={Neural computation in stylometry II: An application to the works of Shakespeare and Marlowe},
+  author={Merriam, Thomas VN and Matthews, Robert AJ},
+  journal={Literary and Linguistic Computing},
+  volume={9},
+  number={1},
+  pages={1--6},
+  year={1994},
+  publisher={ALLC}
+}
+
+@article{holmes1995federalist,
+  title={The Federalist revisited: New directions in authorship attribution},
+  author={Holmes, David I and Forsyth, Richard S},
+  journal={Literary and Linguistic Computing},
+  volume={10},
+  number={2},
+  pages={111--127},
+  year={1995},
+  publisher={ALLC}
+}
+
+@Book{ggplot2,
+    author = {Hadley Wickham},
+    title = {ggplot2: elegant graphics for data analysis},
+    publisher = {Springer New York},
+    year = {2009},
+    isbn = {978-0-387-98140-6},
+    url = {http://had.co.nz/ggplot2/book},
+  }
+  
+  @Article{randomForest,
+    title = {Classification and Regression by randomForest},
+    author = {Andy Liaw and Matthew Wiener},
+    journal = {R News},
+    year = {2002},
+    volume = {2},
+    number = {3},
+    pages = {18-22},
+    url = {http://CRAN.R-project.org/doc/Rnews/},
+  }
+  @article{meyer2014package,
+    title={Package ‘e1071’},
+    author={Meyer, David and Dimitriadou, Evgenia and Hornik, Kurt and Weingessel, Andreas and Leisch, Friedrich and Chang, Chih-Chung and Lin, Chih-Chen and Meyer, Maintainer David},
+    year={2014}
+  }
+  @inproceedings{kohavi1995study,
+    title={A study of cross-validation and bootstrap for accuracy estimation and model selection},
+    author={Kohavi, Ron and others},
+    booktitle={Ijcai},
+    volume={14},
+    number={2},
+    pages={1137--1145},
+    year={1995}
+  }
+  @article{powers2011evaluation,
+    title={Evaluation: from precision, recall and F-measure to ROC, informedness, markedness and correlation},
+    author={Powers, David Martin},
+    year={2011},
+    publisher={Bioinfo Publications}
+  }
+  @article{guzella2009review,
+    title={A review of machine learning approaches to spam filtering},
+    author={Guzella, Thiago S and Caminhas, Walmir M},
+    journal={Expert Systems with Applications},
+    volume={36},
+    number={7},
+    pages={10206--10222},
+    year={2009},
+    publisher={Elsevier}
+  }
+  @book{hastie2009elements,
+    title={The elements of statistical learning},
+    author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome and Hastie, T and Friedman, J and Tibshirani, R},
+    volume={2},
+    number={1},
+    year={2009},
+    publisher={Springer}
+  }
+  @misc{dataset,
+  title={TREC 2007 Data},
+  author={Princeton University},
+  year={2007},
+  url={isun.cs.princeton.edu/trec07p_data.tar.gz},
+  publisher={Princeton University}
+  }
+  @article{abbasi2008writeprints,
+    title={Writeprints: A stylometric approach to identity-level identification and similarity detection in cyberspace},
+    author={Abbasi, Ahmed and Chen, Hsinchun},
+    journal={ACM Transactions on Information Systems (TOIS)},
+    volume={26},
+    number={2},
+    pages={7},
+    year={2008},
+    publisher={ACM}
+  }
